--- a/HelloWorld2/HelloWorld2.csproj
+++ b/HelloWorld2/HelloWorld2.csproj
@@ -43,10 +43,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Animal.cs" />
+    <Compile Include="Boss.cs" />
     <Compile Include="Box.cs" />
+    <Compile Include="Dog.cs" />
+    <Compile Include="ElectricalDevice.cs" />
+    <Compile Include="Employee.cs" />
     <Compile Include="Human.cs" />
+    <Compile Include="ImgPost.cs" />
+    <Compile Include="Post.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Radio.cs" />
+    <Compile Include="Trainee.cs" />
+    <Compile Include="TV.cs" />
+    <Compile Include="VideoPost.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
