Learning and creating classes, interfaces and playing with IEnumerable.

--- a/HelloWorld2/HelloWorld2.csproj
+++ b/HelloWorld2/HelloWorld2.csproj
@@ -46,15 +46,21 @@
     <Compile Include="Animal.cs" />
     <Compile Include="Boss.cs" />
     <Compile Include="Box.cs" />
+    <Compile Include="Cube.cs" />
     <Compile Include="Dog.cs" />
+    <Compile Include="DogShelter.cs" />
     <Compile Include="ElectricalDevice.cs" />
     <Compile Include="Employee.cs" />
     <Compile Include="Human.cs" />
+    <Compile Include="IDestroyable.cs" />
     <Compile Include="ImgPost.cs" />
     <Compile Include="Post.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Radio.cs" />
+    <Compile Include="Shape.cs" />
+    <Compile Include="Sphere.cs" />
+    <Compile Include="Ticket.cs" />
     <Compile Include="Trainee.cs" />
     <Compile Include="TV.cs" />
     <Compile Include="VideoPost.cs" />
